2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs: Did some
	  performance optimizations on the completion list.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Fixed 'Bug
	  601167 - IntelliSense keeps picking the wrong entry'.

2010-04-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs: Unbreak
	  document navigation.

2010-04-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs:
	  Track AddFilesToProject API.

	* MonoDevelop.Ide/ProjectOperations.cs: Handle adding link
	  files to subdirectories of a project in AddFilesToProject
	  method. Tidy up a lot.

2010-04-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Remove
	  underscores from Page_Up/Page_Down when displaying.

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs:
	  Use some generic API.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/AbstractBaseViewContent.cs: ViewContent
	  widgets are now destroyed by the workspace window.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Manually call
	  'box.Destroy ()' (work around for the IntPtr bug).

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandManager.cs: Try to
	  fix an IntPtr exception caused by accessing a invalid
	  FocusChild.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs:
	* MonoDevelop.Ide.Gui/NavigationHistoryService.cs: found
	  better fix for 'Bug 600657 - "Show Previous Warning/Error"
	  fails when there are warnings without file offsets'.

2010-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: